feat: Modificação na estrutura da pasta model e implementação de complementos no produto
Signed-off-by: Gabriel Alves <gbalvessantana@gmail.com>